deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: docker.cikzh.net/anne/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
