deploy/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app
  namespace: anne
  labels:
    app: app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app
  type: NodePort
