deploy/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: anne
  namespace: anne
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  tls:
    - hosts:
        - anne.cikzh.net
      secretName: anne-tls
  rules:
    - host: anne.cikzh.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
